--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
         </nav>
       </header>
       <section class="form-cliente">
-        
+        <h3>Ingrese los datos del cliente</h3>
+        <form>
+          <ul>
+            <li>
+              <input type="text" minlength="1" maxlength="100" name="clientName" class="clientName" title="Digite su nombre completo." placeholder="Nombre completo..." required>              
+            </li>
+            <li>
+              <input type="text" minlength="7" maxlength="9" name="clientDNI" class="clientDNI" title="Ingrese el DNI del cliente sin simbolos" placeholder="DNI..."  pattern="[0-9]{7,9}" required>
+            </li>
+            <li>
+              <select name="clientLocation" required>
+                <option disabled value="" selected>Selecciona una localidad</option>
+                <option value="value1">Value 1</option> 
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>              
+            </li>
+            <li>
+              <button class="confirmClientButton" name="confirmClientButton" type="submit">Confirmar</button>
+            </li>
+          </ul>
+        </form>
       </section>
       <section id="list-clientes">
         
@@ -28,5 +49,6 @@
     </div><!-- End container --> 
     <!-- JQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
