Separated new/edit client view on new file and litle changes on index and script

--- a/index.html
+++ b/index.html
@@ -16,33 +16,7 @@
           <button type="button" name="listClientsButton">Listar clientes</button>
         </nav>
       </header>
-      <section class="form-cliente">
-        <h3>Ingrese los datos del cliente</h3>
-        <form>
-          <ul>
-            <li>
-              <input type="text" minlength="1" maxlength="100" name="clientName" class="clientName" title="Digite su nombre completo." placeholder="Nombre completo..." required>              
-            </li>
-            <li>
-              <input type="text" minlength="7" maxlength="9" name="clientDNI" class="clientDNI" title="Ingrese el DNI del cliente sin simbolos" placeholder="DNI..."  pattern="[0-9]{7,9}" required>
-            </li>
-            <li>
-              <select name="clientLocation" required>
-                <option disabled value="" selected>Selecciona una localidad</option>
-                <option value="value1">Value 1</option> 
-                <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
-              </select>              
-            </li>
-            <li>
-              <button class="confirmClientButton" name="confirmClientButton" type="submit">Confirmar</button>
-            </li>
-          </ul>
-        </form>
-      </section>
-      <section id="list-clientes">
-        
-      </section>
+      <section id="main-section"></section>
       <footer>
         <p>Creado por Lucas Obyszuk</p>
       </footer>
